Fix code review issues: Use proper User entity, remove unused method, modernize stream API
Co-authored-by: neibler <87866961+neibler@users.noreply.github.com>